<resources>

    <string name="app_name">ButtonCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="textview">Do Some Maths!</string>
    <string name="button1">1</string>   
	<string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
	<string name="button0">0</string>
	<string name="buttondecimal">.</string>
	<string name="buttonadd">+</string>
	<string name="buttonsubtract">-</string>
	<string name="buttonmultiply">x</string>
	<string name="buttondivide">/</string>
	<string name="buttonequals">=</string>
	<string name="duplicatedecimal">There are too many decimals in this number!</string>
	<string name="notanumber">This is not a nummber!</string>
    
    
</resources>